# hey-to-gmail

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-20-hey-mbox-to-gmail-implementation.md  2026-03-20-trial-sample-import-implementation.md  2026-03-20-uv-adoption-implementation.md
docs/superpowers/specs/: 2026-03-20-hey-mbox-to-gmail-design.md  2026-03-20-trial-sample-import-design.md  2026-03-20-uv-adoption-design.md
scripts/: measure_rss.py
src/hey_to_gmail/: __main__.py  checkpoint_store.py  cli.py  config.py  duplicate_detector.py  forwarded_filter.py  gmail_client.py  importer.py  label_manager.py  mbox_reader.py  reporting.py
tests/: conftest.py  test_checkpoint_store.py  test_cli.py  test_config.py  test_docs.py  test_duplicate_detector.py  test_forwarded_filter.py  test_gmail_client.py  test_importer_dry_run.py  test_importer_execute.py  test_package_import.py  test_performance_smoke.py
tests/fixtures/headers/: forwarded_missing_one_header.eml  forwarded_strict.eml  not_forwarded_hey_native.eml
